Update 5.11
See CHANGELOG.md for changes. There is a new instruction manual/guide called README_v1.11.md